# dual-control

./: .editorconfig  .gitignore  .travis.yml  2  AUTHORS  CODESTYLE  Makefile.am  Makefile.in  README.md  TODO.md  argument.cc  argument.h  argument_test.cc  astylerc  base32.cc  base32.h  base32_test.cc  become.h  become_test.cc  configure  configure.ac  conversation.c  conversation.cc  conversation.h  conversation_test.cc  conversation_test.out  dc_syslog.c  dc_syslog.h  dual_control  dual_control.c  dual_control.cc  dual_control.h  dual_control_integrate.cc  dual_control_test  dual_control_test.c  dual_control_test.cc  dual_control_test.out  dual_control_tool.cc  dual_control_tool.h  file_reader.cc  (+72 more)
